Add Front Matter
Add front matter to first blog

--- a/_posts/2019-12-30-footy.md
+++ b/_posts/2019-12-30-footy.md
@@ -1,1 +1,6 @@
-Steel, scaffolds, orange-jackets, cranes and trucks ...
+---
+title: "The Maribyrnong"
+date: 2019-12-30
+---
+
+Steel, scaffolds, orange-jackets, cranes,trucks and thumping ...
